--- a/mcp-button-state/Dockerfile
+++ b/mcp-button-state/Dockerfile
@@ -4,37 +4,21 @@ FROM python:3.13-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies for uv and any potential C extensions
-RUN apt-get update && apt-get install -y \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
+# Copy requirements file
+COPY requirements.txt .
 
-# Install uv
-RUN pip install uv
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy dependency files
-COPY pyproject.toml uv.lock ./
+# Copy server code
+COPY sse_server.py .
+COPY server.py .
 
-# Install Python dependencies
-RUN uv sync --frozen
+# Expose port 8080 (Cloud Run default)
+EXPOSE 8080
 
-# Copy application code
-COPY . .
+# Set environment variable for port
+ENV PORT=8080
 
-# Create a non-root user
-RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
-USER appuser
-
-# Expose the port
-EXPOSE 8001
-
-# Set environment variables
-ENV PORT=8001
-ENV PYTHONPATH=/app
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8001/ || exit 1
-
-# Run the SSE server
-CMD ["uv", "run", "python", "sse_server.py"]
+# Run the server
+CMD ["python", "sse_server.py"]
