--- a/mcp-button-state/Dockerfile
+++ b/mcp-button-state/Dockerfile
@@ -10,9 +10,10 @@ COPY requirements.txt .
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy server code
+# Copy server code and static files
 COPY sse_server.py .
 COPY server.py .
+COPY static/ static/
 
 # Expose port 8080 (Cloud Run default)
 EXPOSE 8080
