--- a/mcp-greet/pyproject.toml
+++ b/mcp-greet/pyproject.toml
@@ -17,4 +17,4 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-py-modules = ["server", "sse_server"]
+py-modules = ["server"]
